-----------------------------------------------------------------------

Changes:

Features:

- "Switch XXLTearline on" by A. Ilchenko. If you set this, you can have a
  tearline of up to 79 characters (instead of 35), and the Unix version will
  print system information in the tearline. But be aware that this violates
  FTSC rules, so using this is discouraged.

Fixes:

- Fix crash when posting more than 1 message to JAM areas. (Raised version
  to 6.1.2. This may have side effects on Squish, beware!)

- Fix handling of CHARSET kludge and of CHRS kludge without "level".  Level
  2 is now assumed as default.

- Redraw problems in dialog box buttons fixed.

- In template text in forwarded and redirected messages, the areatag was
  filled in incorrectly if the area grouping feature (group separators etc.)
  was used.


Features, Changes and Fixes in Msged 6.0.0
------------------------------------------

Changes:

- The default value of the "Gate" keyword is now "ASK" (see also features).

- Brought Msged/TE in line with FSP 1013 (resp. Charset Kludges). Msged now
  uses and understands the new-style CPxxx CHRS kludges instead of the
  obsolete "IBMPC" charset kludge. In order to be compatible with other
  readers, you should definitely add the following line to your config file:
     CharsetAlias IBMPC CPxxx
  where xxx should be the codepage that is used most frequently in your
  country (850 for Western Europe, 437 for America, 866 for Russia).
  If you want to use the new style CPxx CHRS kludges for output, you must
  also change your OutputCharset statement like
     OutputCharset CPxxx
  but be aware of the fact that, except for perhaps Russian setups, most
  readers do not yet understand the "CPxxx" charset kludge.  If you stick
  with the old "OutputCharset IBMPC" method, Msged will emit an
  additional "@CODEPAGE" kludge to denote the codepage that you are using.

  Please also make sure that you are using the correct translation